--- a/SoccerWeb/appsettings.json
+++ b/SoccerWeb/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SoccerConnection": "Server=(localdb)\\ProjectsV13;Database=Soccer;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
+
 }
